# backend-team-two

./: .env.example  .gitignore  Dockerfile  README.md  app.py  conftest.py  docker-compose.yaml  note.md  pyproject.toml  requirements.txt
config/: local.py  settings.py  testing.py
instance/: database.py
migrations/versions/: 9219b4cfba85_add_product_product_detail_relationship.py  fcb94f77fd40_initiate_migrate.py
models/: __init__.py  product.py  product_detail.py  review.py  user.py
repo/: product_detail_repo.py  product_repo.py  review_repo.py  user_repository.py
route/: __init__.py  auth.py  index.py  product.py  product_detail_route.py  product_route.py  product_routes.py  review.py  review_route.py
services/: auth_service.py  product_detail_services.py  product_service.py  review_service.py
shared/: crono.py
tests/: conftest.py  test_app.py  test_auth.py  test_product_detail.py  test_review_service_get.py
